# llm_silent_cot

./: .gitignore  README.md  pyproject.toml
bbq/batch/: analyze_batch.py
bbq/interactive/: blank_vs_accuracy.py  config.py
bbq/results_graphs/: analyze.py  generate_graphs.py  graph_utils.py
internals/: config.py  hf_comparison.py  logit_lens.py
src/: __init__.py
src/bbq/results_graphs/: analysis_utils.py
src/internals/: quick.py
