[project]
name = "llm-silent-cot"
version = "0.1.0"
description = "Investigating silent chain-of-thought in reasoning LLMs"
requires-python = ">=3.10,<3.13"

dependencies = [
    # ML Stack
    "torch>=2.0.0",
    "transformers>=4.47.0",
    "accelerate>=1.10.0",
    "datasets>=2.2.1",
    "einops>=0.8.0",
    
    # Analysis & Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    "plotly>=5.24.0",
    
    # Utilities
    "tqdm",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # Dev / Notebook
    "ipykernel",
    "jupyterlab",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

