[project]
name = "llm-silent-cot"
version = "0.1.0"
description = "Investigating unfaithful chain-of-thought in reasoning LLMs"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # ML Stack
    "torch>=2.0.0",
    "transformers>=4.47.0",
    "accelerate>=1.10.0",
    "datasets>=2.2.1",
    "einops>=0.8.0",
    
    # Mechanistic Interpretability
    "transformer-lens>=2.0.0",
    
    # Analysis & Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    
    # Utilities
    "tqdm",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyterlab",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bbq", "src/internals", "src/shared"]

[tool.uv]
package = false
